fixed alignment issue on login page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,7 +175,7 @@ a {
 #addSubBtn {
     height: auto;
     width: 20%;
-    max-width: 150px;
+    max-width: 100px;
     position: fixed;
     bottom: 5%;
     right: 7%;
